news item visible and mobile menu fixes

--- a/indians/static/scss/components/club_page.scss
+++ b/indians/static/scss/components/club_page.scss
@@ -21,6 +21,10 @@
         max-width: 100%
       }
 
+      p {
+        overflow: hidden;
+      }
+
       @media screen and (max-width: 680px) {
         grid-column-start: 1;
         grid-column-end: 13;
